clusters/dev/dev/metrics-editor.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-editor
  namespace: monitoring
  labels:
    app: metrics-editor
spec:
  selector:
    matchLabels:
      app: metrics-editor
  template:
    metadata:
      labels:
        app: metrics-editor
    spec:
      containers:
        - name: metrics-editor
          image: ekzhang/rustpad:latest
          ports:
            - name: http
              containerPort: 3030
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-editor
  namespace: monitoring
  labels:
    app: metrics-editor
spec:
  selector:
    app: metrics-editor
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3030
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metrics-editor
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: ingress-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
spec:
  ingressClassName: nginx
  rules:
    - host: metrics-editor.dev.fellesdatakatalog.digdir.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metrics-editor
                port:
                  name: http
